2010-07-16  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15723: Wrong TypoScript path in documentation (Thanks to Bernhard Kraft)

2010-07-15  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15719: HTML5 <menu> element not styled (Thanks to Rafal Brzeski)
	* Fixed issue: #15718: Long words might cause strange look in pagemodule
	* Fixed issue: #15706: in trunk: not resolved template file names cause error in mod2/index.php (Thanks to Björn Pedersen)
	* Fixed issue: #15695: Edit link not clickable with Drag n Drop enable with Internet Explorer (Thanks to Megaspoilt)

2010-07-14  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13974: HTML5 tag support 
	* Fixed issue: #15125: static DS not working in conjunction with TYPO3 caches (f.e. TCA cache) (Thanks to Franz Koch)

2010-07-09  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15670: content element preview in TV module for filelist can get very wide 
	* Fixed issue: #14314: beLayout does not work with Static Data Structures in Extensions 
	* Fixed issue: #15675: pagemodule resource "API" behaves inconsistent

2010-07-05  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14386: Static DS - Centralize access to datastructure / pt.4 - mod2 uses proper objects now

2010-09-01  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15614: Element warnings are inconsistent and lack information

2010-08-31  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #3813: Localization is not respected when migrating a traditional site using the "Functions" module (Thanks to Bernhard Kraft)

2010-08-30  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - special page padding fixed
	* Fixed issue: #15411: Unmapped Elements of etype 'ce' / 'no_map' don't show in TV BE page module (Thanks to Marcel Greter)
	* Fixed issue: #15568: Hardcoded added TS snipped crashes output
